fix(match2): game score holder in lol matchpage shows unintended line break in bo1 (#6998)
adjust padding

--- a/stylesheets/commons/BigMatch.scss
+++ b/stylesheets/commons/BigMatch.scss
@@ -983,7 +983,7 @@ span.slash {
 			flex-direction: column;
 			justify-content: center;
 			align-items: center;
-			padding: 0 1rem;
+			padding: 0 0.5rem;
 			gap: 4px;
 			text-align: center;
 		}
